docs/admission-controller/version-1.38/modules/en/pages/tutorials/writing-policies/rust/01-intro-rust.adoc
include::partial$variables.adoc[]
= Rust
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-05-04
:page-revdate: {revdate}
:description: Learn how to write admission controller policies in Rust with SUSE's security admission controllers simplified SDK and template projects.
:doc-persona: ["kubewarden-policy-developer"]
:doc-topic: ["kubewarden", "writing-policies", "rust", "introduction"]
:doc-type: ["tutorial"]
:keywords: ["kubewarden", "kubernetes", "writing policies", "introduction"]
:sidebar_label: Rust
:current-version: {page-origin-branch}

https://www.rust-lang.org/[Rust] is the most mature programming language that can generate WebAssembly modules.
WebAssembly is a first-class citizen in the Rust world so many of the tools and crates from the Rust ecosystem work out of the box.

{admc-name} provides a https://crates.io/crates/kubewarden-policy-sdk[Rust SDK] that simplifies the process of writing policies.
There is also a https://github.com/kubewarden/rust-policy-template[template project] to provide scaffolding for a policy project using the https://github.com/cargo-generate/cargo-generate[`cargo-generate`] utility.

This documentation shows how to use these projects to write {admc-short-name} policies using Rust.
It doesn't cover the details of {admc-short-name}'s Rust SDK.
The details are in the https://docs.rs/kubewarden-policy-sdk/0.1.0[crate documentation].

== Getting the Rust dependencies

Install the Rust compiler and its tools using
https://github.com/rust-lang/rustup[rustup].
Refer to the rustup https://rust-lang.github.io/rustup/installation/index.html[install documentation].

Once you have installed `rustup` add the WebAssembly System Interface (WASI) target:

[subs="+attributes",console]
----
rustup target add wasm32-wasip1
----

== OSX dependencies

To use `cargo-generate` you need to add the Xcode tool set.
If it isn't installed through Xcode the following command gives you the dependencies needed:

[subs="+attributes",console]
----
xcode-select --install
----
